# setuka

./: README.md  hardware-Progress.txt
app/: globals.css  layout.tsx  page.tsx
authority-dashboard/: .env.example  README.md  api.py  data.py  generate_police.py  live_location.json  police_patrol_dataset.csv  pyproject.toml  requirements.txt  run_dashboard.py  spatial_data.geojson  start_dashboard.bat
authority-dashboard/app/: main.py
authority-dashboard/app/models/: safety_scaler.joblib  safety_xgboost.joblib
authority-dashboard/app/pages/: 1_Crowd_Safety_Scoring.py  2_AI_Recommendations.py  3_Tourist_Anomaly_Detection.py
authority-dashboard/isolation/isolation/: detect_anomalies.py  generate_data.py  requirements.txt  server.py  visualize_routes.py
authority-dashboard/isolation/isolation/data/: actual_gps.csv  anomaly_log.csv  planned_route_paths.csv  planned_routes.csv
authority-dashboard/isolation/isolation/results/: detected_anomalies.csv  detection_results.csv  tourist_summary.csv
authority-dashboard/isolation_module/: README.md  detect_anomalies.py  main.py  pyproject.toml  server.md  server.py
authority-dashboard/isolation_module/data/: actual_gps.csv  anomaly_log.csv  planned_route_paths.csv  planned_routes.csv
authority-dashboard/isolation_module/results/: anomaly_report.json
authority-dashboard/isolation_module/visualizations/: routes_map.html
authority-dashboard/utils/: ai_agents.py  clustering.py  geocoding_utils.py  langchain_agents.py  map_layers.py  preprocessing.py
blockchain/: blockchain-viem.ts  simple-deploy.js  test-anchor.js
(+105 files in other folders)
