[project]
name = "doubleslash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium==0.15.0",
    "geopandas==0.14.0",
    "google-generativeai==0.3.2",
    "joblib==1.3.2",
    "langchain>=0.1.16,<0.2.0",
    "langchain-google-genai>=0.0.9",
    "langchain-groq>=0.1.0",
    "numpy==1.26.2",
    "groq>=0.5.0",
    "pandas==2.1.3",
    "plotly==5.17.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "shapely==2.0.2",
    "streamlit==1.28.0",
    "streamlit-folium==0.15.0",
    "xgboost==2.0.3",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
]
